# tarantoolapp

./: .gitignore  .gitmodules  LICENSE  README.md  tarantoolapp-scm-1.rockspec
rockspecs/: tarantoolapp-1.0.0-1.rockspec  tarantoolapp-1.0.1-1.rockspec  tarantoolapp-1.0.2-1.rockspec  tarantoolapp-1.0.3-1.rockspec  tarantoolapp-1.0.4-1.rockspec  tarantoolapp-1.0.5-1.rockspec  tarantoolapp-scm-1.rockspec  tarantoolapp-scm-3.rockspec
tarantoolapp/: argparse.lua  commands.lua  compat.lua  fileio.lua  getopt.lua  util.lua
tarantoolapp/commands/: create.lua  dep.lua  dep2.lua
template/: .gitignore
templates/basic/: .gitignore  Makefile  README.md  config.yaml  dep.py  init.lua  meta.yaml
templates/basic/app/: init.lua  {{__appname__}}.lua
templates/basic/hooks/: post_gen.lua
templates/basic/rpm/: {{__appname__}}.spec
templates/basic/scripts/: run.sh  tnt-env.sh
templates/basic/template/: .tarantoolctl  Makefile  README.md  conf.lua  dep.lua  init.lua  meta.yaml  {{__name__}}.lua
templates/basic/template/app/: init.lua  mod1.lua  schema.lua  (+1 more)
templates/ckit/template/: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  README.md  {{__appname__}}-scm-1.rockspec  {{__name__}}-scm-1.rockspec
templates/ckit/template/debian/: changelog  control  copyright  rules
templates/ckit/template/rpm/: tarantool-{{__appname__}}.spec  tarantool-{{__name__}}.spec
templates/ckit/template/test/: {{__appname__}}.test.lua  {{__name__}}.test.lua
templates/ckit/template/{{__appname__}}/: init.lua  lib.c
templates/ckit/template/{{__name__}}/: CMakeLists.txt  init.lua  lib.c
templates/luakit/template/: .travis.yml  LICENSE  README.md  {{__appname__}}-scm-1.rockspec  {{__name__}}-scm-1.rockspec
templates/universal/template/: .luarocks-config  Makefile  init.lua
templates/vshard/template/: Makefile  README.md  meta.yaml  router.lua  storage.lua
(+34 files in other folders)
